force-app/main/default/objects/Loan_Application__c/Loan_Application__c.object-meta.xml
<CustomObject>
    <!-- Core loan application object. History tracking enabled on Status__c and Final_Recommendation__c fields. -->
    <!-- Roll-up summaries on Loan_Application_History__c cannot use native Summary fields because History uses Lookup (not Master-Detail) per RBI 7-year retention requirement. Use DLRS or Apex for: Total_History_Events__c, Agent_Events_Count__c, Compliance_Violations_Count__c, Officer_Overrides_Count__c. -->
    <label>Loan Application</label>
    <nameField>
        <displayFormat>LA-{0000000}</displayFormat>
        <label>Application Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loan Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>