force-app/main/default/objects/Loan_Application__c/fields/All_Agents_Completed__c.field-meta.xml
<CustomField>
    <fullName>All_Agents_Completed__c</fullName>
    <label>All Agents Completed</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>