force-app/main/default/objects/Loan_Application__c/fields/Application_Channel__c.field-meta.xml
<CustomField>
    <fullName>Application_Channel__c</fullName>
    <label>Application Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
        <value>
            <fullName>Web</fullName>
        </value>
        <value>
            <fullName>Mobile</fullName>
        </value>
        <value>
            <fullName>Branch</fullName>
        </value>
        <value>
            <fullName>DSA</fullName>
        </value>
        <value>
            <fullName>Partner</fullName>
        </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>