force-app/main/default/objects/Loan_Application__c/fields/Calculated_EMI__c.field-meta.xml
<CustomField>
    <fullName>Calculated_EMI__c</fullName>
    <label>Calculated EMI</label>
    <formula>IF(AND(Tenure_Months__c &gt; 0, Loan_Amount__c &gt; 0), IF(Interest_Rate__c &gt; 0, Loan_Amount__c * (Interest_Rate__c / 1200) * (1 + Interest_Rate__c / 1200) ^ Tenure_Months__c / ((1 + Interest_Rate__c / 1200) ^ Tenure_Months__c - 1), Loan_Amount__c / Tenure_Months__c), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>