force-app/main/default/objects/Loan_Application__c/fields/Decision_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Decision_Reasons__c</fullName>
    <label>Decision Reasons</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>