force-app/main/default/objects/Loan_Application__c/fields/EMI_Burden__c.field-meta.xml
<CustomField>
    <fullName>EMI_Burden__c</fullName>
    <label>EMI Burden</label>
    <formula>IF(Monthly_Income__c &gt; 0, Existing_EMI__c / Monthly_Income__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>