force-app/main/default/objects/Loan_Application__c/fields/Existing_EMI__c.field-meta.xml
<CustomField>
    <fullName>Existing_EMI__c</fullName>
    <label>Existing EMI</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
    <required>true</required>
</CustomField>