force-app/main/default/objects/Loan_Application__c/fields/Final_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Final_Recommendation__c</fullName>
    <label>Final Recommendation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Approve</fullName><default>false</default><label>Approve</label></value>
            <value><fullName>Hold</fullName><default>false</default><label>Hold</label></value>
            <value><fullName>Reject</fullName><default>false</default><label>Reject</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>