force-app/main/default/objects/Loan_Application__c/fields/FOIR_After_Loan__c.field-meta.xml
<CustomField>
    <fullName>FOIR_After_Loan__c</fullName>
    <label>FOIR After Loan</label>
    <formula>IF(Monthly_Income__c &gt; 0, (Existing_EMI__c + Calculated_EMI__c) / Monthly_Income__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>