force-app/main/default/objects/Loan_Application__c/fields/Loan_Amount_Approved__c.field-meta.xml
<CustomField>
    <fullName>Loan_Amount_Approved__c</fullName>
    <label>Loan Amount Approved</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>