force-app/main/default/objects/Loan_Application__c/fields/Loan_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Loan_Purpose__c</fullName>
    <label>Loan Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
        <value>
            <fullName>Personal Use</fullName>
        </value>
        <value>
            <fullName>Wedding</fullName>
        </value>
        <value>
            <fullName>Medical Emergency</fullName>
        </value>
        <value>
            <fullName>Home Renovation</fullName>
        </value>
        <value>
            <fullName>Education</fullName>
        </value>
        <value>
            <fullName>Travel</fullName>
        </value>
        <value>
            <fullName>Debt Consolidation</fullName>
        </value>
        <value>
            <fullName>Vehicle Purchase</fullName>
        </value>
        <value>
            <fullName>Business Expansion</fullName>
        </value>
        <value>
            <fullName>Working Capital</fullName>
        </value>
        <value>
            <fullName>Equipment Purchase</fullName>
        </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>