force-app/main/default/objects/Loan_Application__c/fields/LTI__c.field-meta.xml
<CustomField>
    <fullName>LTI__c</fullName>
    <label>LTI</label>
    <formula>IF(Monthly_Income__c &gt; 0, Loan_Amount__c / (Monthly_Income__c * 12), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>