force-app/main/default/objects/Loan_Application__c/fields/Missing_Documents__c.field-meta.xml
<CustomField>
    <fullName>Missing_Documents__c</fullName>
    <label>Missing Documents</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>