force-app/main/default/objects/Loan_Application__c/fields/Monthly_Income__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Income__c</fullName>
    <label>Monthly Income</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
    <required>true</required>
</CustomField>