force-app/main/default/objects/Loan_Application__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
        <value>
            <fullName>Low</fullName>
        </value>
        <value>
            <fullName>Medium</fullName>
        </value>
        <value>
            <fullName>High</fullName>
        </value>
        <value>
            <fullName>Urgent</fullName>
        </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>