force-app/main/default/objects/Loan_Application__c/fields/Risk_Level__c.field-meta.xml
<CustomField>
    <fullName>Risk_Level__c</fullName>
    <label>Risk Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
        <value>
            <fullName>Very Low</fullName>
        </value>
        <value>
            <fullName>Low</fullName>
        </value>
        <value>
            <fullName>Medium</fullName>
        </value>
        <value>
            <fullName>High</fullName>
        </value>
        <value>
            <fullName>Very High</fullName>
        </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>