force-app/main/default/objects/Loan_Application__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Draft</fullName><default>true</default><label>Draft</label></value>
            <value><fullName>Submitted</fullName><default>false</default><label>Submitted</label></value>
            <value><fullName>Under Review</fullName><default>false</default><label>Under Review</label></value>
            <value><fullName>Documents Pending</fullName><default>false</default><label>Documents Pending</label></value>
            <value><fullName>KYC In Progress</fullName><default>false</default><label>KYC In Progress</label></value>
            <value><fullName>Underwriting</fullName><default>false</default><label>Underwriting</label></value>
            <value><fullName>On Hold</fullName><default>false</default><label>On Hold</label></value>
            <value><fullName>Approved</fullName><default>false</default><label>Approved</label></value>
            <value><fullName>Rejected</fullName><default>false</default><label>Rejected</label></value>
            <value><fullName>Disbursed</fullName><default>false</default><label>Disbursed</label></value>
            <value><fullName>Closed</fullName><default>false</default><label>Closed</label></value>
            <value><fullName>Withdrawn</fullName><default>false</default><label>Withdrawn</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>