force-app/main/default/objects/Loan_Application__c/fields/Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>Sub_Status__c</fullName>
    <label>Sub Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
        <value>
            <fullName>KYC Pending</fullName>
        </value>
        <value>
            <fullName>Docs Pending</fullName>
        </value>
        <value>
            <fullName>Under Underwriting</fullName>
        </value>
        <value>
            <fullName>Approval Pending</fullName>
        </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>