force-app/main/default/objects/Loan_Application__c/fields/Underwriter__c.field-meta.xml
<CustomField>
    <fullName>Underwriter__c</fullName>
    <label>Underwriter</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Loan Applications (Underwriter)</relationshipLabel>
    <relationshipName>Loan_Applications_Underwriter</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <type>Lookup</type>
</CustomField>