force-app/main/default/objects/Loan_Application__c/validationRules/Loan_Amount_Range.validationRule-meta.xml
<ValidationRule>
    <fullName>Loan_Amount_Range</fullName>
    <active>true</active>
    <description>Loan amount must be between 10,000 and 5,000,000</description>
    <errorConditionFormula>OR(Loan_Amount__c &lt; 10000, Loan_Amount__c &gt; 5000000)</errorConditionFormula>
    <errorDisplayField>Loan_Amount__c</errorDisplayField>
    <errorMessage>Loan amount must be between 10,000 and 5,000,000.</errorMessage>
</ValidationRule>