force-app/main/default/objects/Loan_Application__c/validationRules/Monthly_Income_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Monthly_Income_Required</fullName>
    <active>true</active>
    <description>Monthly income cannot be blank or zero</description>
    <errorConditionFormula>OR(ISBLANK(Monthly_Income__c), Monthly_Income__c &lt;= 0)</errorConditionFormula>
    <errorDisplayField>Monthly_Income__c</errorDisplayField>
    <errorMessage>Monthly income is required and must be greater than zero.</errorMessage>
</ValidationRule>