force-app/main/default/objects/Loan_Application__c/validationRules/Tenure_Range.validationRule-meta.xml
<ValidationRule>
    <fullName>Tenure_Range</fullName>
    <active>true</active>
    <description>Tenure must be between 3 and 84 months</description>
    <errorConditionFormula>OR(Tenure_Months__c &lt; 3, Tenure_Months__c &gt; 84)</errorConditionFormula>
    <errorDisplayField>Tenure_Months__c</errorDisplayField>
    <errorMessage>Tenure must be between 3 and 84 months.</errorMessage>
</ValidationRule>